--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "^3.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
